fix : add security filter chain